refactor Dockerfile to run onnx binary